✅ Fixed  Z-INDEX of plns

--- a/public/css/homePage/style.css
+++ b/public/css/homePage/style.css
@@ -171,7 +171,7 @@
         align-items: center;
         height: 100vh;
         padding: 20px;
-        z-index: 1000;
+        z-index: 100;
     }
 
     .plans-card {
